--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
     --light: #F8F9FA;
     --dark: #182333;
 }
-body{
-    direction: rtl !important;
-}
-
 
 .back-to-top {
     position: fixed;
@@ -17,8 +13,17 @@ body{
     bottom: 30px;
     z-index: 99;
 }
-
-
+body{
+    direction: rtl;
+}
+.IconSite,
+.Service .service-icon img{
+    width: 50px !important;
+    height: 50px !important;
+}
+.Service .service-icon{
+    border-radius: 100%;
+}
 /*** Spinner ***/
 #spinner {
     opacity: 0;
@@ -33,12 +38,7 @@ body{
     opacity: 1;
 }
 
-.m-0 img,
-.footImg img{
-    width: 50px !important;
-    height: 50px !important;
-    border-radius: 100%;
-}
+
 /*** Button ***/
 .btn {
     font-weight: 500;
@@ -135,19 +135,7 @@ body{
         transition: .5s;
         opacity: 1;
     }
-    .carousel-inner {
-        text-align: center !important;
-    }
-    .carousel-inner img{
-        width: 80% !important;
-        height: 600px ;
-    }
-    .navbar-expand-lg .navbar-nav {
-        flex-direction: row;
-        margin-right: 10px;
-    }
 }
-
 
 
 /*** Header ***/
@@ -158,20 +146,11 @@ body{
     bottom: 0;
     display: flex;
     align-items: center;
-    text-align: start;   
+    text-align: start;
+    background: rgba(0, 0, 0, .65);
     z-index: 1;
 }
-.carousel-inner .justify-content-center{
-    position: relative !important;
-    height: 50vh;
-}
-.carousel-inner .btn-primary{
-position: absolute !important;
-bottom: 50px !important;
-right: 50px;
-font-size: 25px !important;
-font-weight: bold !important;
-}
+
 .carousel-control-prev,
 .carousel-control-next {
     width: 15%;
@@ -203,7 +182,7 @@ font-weight: bold !important;
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit:fill
+        object-fit: cover;
     }
 
     .carousel-control-prev-icon,
@@ -386,46 +365,56 @@ font-weight: bold !important;
     color: var(--primary);
 }
 
-/*# sourceMappingURL=style.css.map */
-#mass{
-    background-color: rgba(0, 0, 0, 0.24);
-    display: block !important;
-    left: 19px !important;
-    bottom: 2px !important;
-    z-index: 1111;  
-    direction: ltr;
-  }
-  #massphone{
-    display: block !important;
-    right: 19px !important;
-    bottom: 2px !important;
-    z-index: 1111;  
-    
-  }
-
-  #massphone i{
- 
-    transform: rotate(329deg);
-    background-color: rgb(243 230 230);
-    font-size: 47px !important;
-  }
-  #mass i,
-  #massphone i{
-    
-   
-    border-radius: 100%;
-    padding: 11px;  
-   
-  }
-  #mass i
- {  
-    font-size: 57px !important;
-    color: #28a745 !important;
-  }
-  .col-xl-3.col-sm-6.wow.fadeIn{
-    margin-bottom: 15px !important;
-    margin-right: 15px !important;
-  }
-  .navbar-brand {    
-    margin-right: 0px !important    
+.classphon {     
+    position: fixed;   
+    bottom: 10px;
+    right: 10px;
+    z-index: 2; 
+}
+.classWa {     
+    position: fixed;   
+    bottom: 10px;
+    left: 10px;
+    z-index: 2;
+}
+.jWcIXO {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    order: 2;
+    padding: 5px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    cursor: pointer;
+    overflow: hidden;
+    box-shadow: rgb(0 0 0 / 40%) 2px 2px 6px;
+    transition: all 0.5s ease 0s;
+    position: relative;
+    z-index: 200;
+    display: block;
+    border: 0px;   
+    position: relative;
+}
+.jWcIXOWhat {   
+    background-color: rgb(77, 194, 71) !important;   
+}
+.jWcIXOPhone {   
+    background-color:  var(--primary) !important;  
+}
+.jWcIXO .fa-whatsapp,
+.jWcIXO .fa-phone-alt{
+    font-size: 34px;
+    position: absolute;
+    top: 6px;
+    left: 11px;
+    color: #fff;
+}
+.jWcIXO:hover  .fa-whatsapp,
+.jWcIXO:hover .fa-phone-alt,
+.jWcIXO:focus  .fa-whatsapp,
+.jWcIXO:first .fa-phone-alt,
+.fa-whatsapp:hover,
+.fa-phone-alt:hover
+{
+    color: #262626 !important;
 }
